--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 <body>
     <div id="game-detail">
         <div id="game-name">PING PONG GAME</div>
-        <div class="score" id="rod-1-score">
-            <div id="rod-1 title">Rod 1</div>
-            <p>0</p>
+        <div class="score" id="rod-1-title">
+            <div >Rod 1</div>
+            <p id="rod-1-score">0</p>
         </div>
-        <div class="score" id="rod-2-score">
-            <div id="rod-2 title">Rod 2</div>
-            <p>0</p>    
+        <button type="button" id="reset">Reset</button>
+        <div class="score" id="rod-2-title">
+            <div>Rod 2</div>
+            <p id="rod-2-score">0</p>    
         </div>
     </div>
     <div id="game-window">
